Update: Added further implementation for the pdf processing.

--- a/knowledgebase/createKnowledgebase.ipynb
+++ b/knowledgebase/createKnowledgebase.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "230053d3",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "a161b3bf",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "806e37b8",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_14204\\2939797386.py:1: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
+      "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_4504\\2939797386.py:1: LangChainDeprecationWarning: The class `OpenAIEmbeddings` was deprecated in LangChain 0.0.9 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import OpenAIEmbeddings``.\n",
       "  embeddings = OpenAIEmbeddings(api_key=os.getenv(\"OPENAI_API_KEY\"))\n"
      ]
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "57e7c09b",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "56877f8e",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "69e23940",
    "metadata": {},
    "outputs": [],
@@ -952,42 +952,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "1c515aff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(id='Chemical Guys New Car Smell Freshener', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'Chemical Guys New Car Smell Freshener', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:Chemical Guys New Car Smell Freshener/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id='Chemical Guys Cherry Blast Freshener', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'Chemical Guys Cherry Blast Freshener', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:Chemical Guys Cherry Blast Freshener/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id='LITTLE TREES Car Air Freshener (Watermelon)', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'LITTLE TREES Car Air Freshener (Watermelon)', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:LITTLE TREES Car Air Freshener (Watermelon)/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id='Little Trees Bubble Gum Air Freshener', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'Little Trees Bubble Gum Air Freshener', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:Little Trees Bubble Gum Air Freshener/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id='Peach Berry Car Air Fresheners', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'Peach Berry Car Air Fresheners', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:Peach Berry Car Air Fresheners/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id=\"MRS. MEYER'S CLEAN DAY All-Purpose Cleaner Spray, Rain Water, 16 fl. oz Pack of 3\", metadata={'category': 'NaN', 'code': 34029000.0, 'desc': \"MRS. MEYER'S CLEAN DAY All-Purpose Cleaner Spray, Rain Water, 16 fl. oz Pack of 3\", 'gdesc': 'SCHOONMAAKMIDDEL'}, page_content=\"The description of this item is:MRS. MEYER'S CLEAN DAY All-Purpose Cleaner Spray, Rain Water, 16 fl. oz Pack of 3/nThe description of the goods is:SCHOONMAAKMIDDEL\"),\n",
-       " Document(id='LITTLE TREES Car Air Freshener (Cherry)', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'LITTLE TREES Car Air Freshener (Cherry)', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:LITTLE TREES Car Air Freshener (Cherry)/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id=\"MRS. MEYER'S CLEAN DAY Liquid Dish Soap, Biodegradable Formula, Rain Water, 16 fl. oz\", metadata={'category': 'NaN', 'code': 34029000.0, 'desc': \"MRS. MEYER'S CLEAN DAY Liquid Dish Soap, Biodegradable Formula, Rain Water, 16 fl. oz\", 'gdesc': 'SCHOONMAAKMIDDEL'}, page_content=\"The description of this item is:MRS. MEYER'S CLEAN DAY Liquid Dish Soap, Biodegradable Formula, Rain Water, 16 fl. oz/nThe description of the goods is:SCHOONMAAKMIDDEL\"),\n",
-       " Document(id=\"MRS. MEYER'S CLEAN DAY Liquid Dish Soap, Biodegradable Formula, Limited Edition Snowdrop, 16 Fl. Oz Pack of 3\", metadata={'category': 'NaN', 'code': 34029000.0, 'desc': \"MRS. MEYER'S CLEAN DAY Liquid Dish Soap, Biodegradable Formula, Limited Edition Snowdrop, 16 Fl. Oz Pack of 3\", 'gdesc': 'SCHOONMAAKMIDDEL'}, page_content=\"The description of this item is:MRS. MEYER'S CLEAN DAY Liquid Dish Soap, Biodegradable Formula, Limited Edition Snowdrop, 16 Fl. Oz Pack of 3/nThe description of the goods is:SCHOONMAAKMIDDEL\"),\n",
-       " Document(id='Chemical Guys AIR_301_04 Sample Kit', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'Chemical Guys AIR_301_04 Sample Kit', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:Chemical Guys AIR_301_04 Sample Kit/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id='Air Jungles New Car Scent Clip', metadata={'category': 'NaN', 'code': 33073000.0, 'desc': 'Air Jungles New Car Scent Clip', 'gdesc': 'LUCHTVERFRISSER'}, page_content='The description of this item is:Air Jungles New Car Scent Clip/nThe description of the goods is:LUCHTVERFRISSER'),\n",
-       " Document(id='Bathroom Shower Gel Dispenser Storage Container (7x)', metadata={'category': 'NaN', 'code': 39241000.0, 'desc': 'Bathroom Shower Gel Dispenser Storage Container (7x)', 'gdesc': 'PLASTIEK DISPENSER'}, page_content='The description of this item is:Bathroom Shower Gel Dispenser Storage Container (7x)/nThe description of the goods is:PLASTIEK DISPENSER'),\n",
-       " Document(id='PURELL Advanced Hand Sanitizer', metadata={'category': 'NaN', 'code': 34011100.0, 'desc': 'PURELL Advanced Hand Sanitizer', 'gdesc': 'ZEEP'}, page_content='The description of this item is:PURELL Advanced Hand Sanitizer/nThe description of the goods is:ZEEP'),\n",
-       " Document(id='Bissell Multi-Surface Pet with Citrus, 80oz', metadata={'category': 'NaN', 'code': 34029000.0, 'desc': 'Bissell Multi-Surface Pet with Citrus, 80oz', 'gdesc': 'SCHOONMAAKMIDDEL'}, page_content='The description of this item is:Bissell Multi-Surface Pet with Citrus, 80oz/nThe description of the goods is:SCHOONMAAKMIDDEL'),\n",
-       " Document(id='Household Crevice Cleaning Brush', metadata={'category': 'NaN', 'code': 96033000.0, 'desc': 'Household Crevice Cleaning Brush', 'gdesc': 'BORSTELS'}, page_content='The description of this item is:Household Crevice Cleaning Brush/nThe description of the goods is:BORSTELS'),\n",
-       " Document(id='Shower Squeegee', metadata={'category': 'NaN', 'code': 82055900.0, 'desc': 'Shower Squeegee', 'gdesc': 'HANDGEREEDSCHAPPEN'}, page_content='The description of this item is:Shower Squeegee/nThe description of the goods is:HANDGEREEDSCHAPPEN'),\n",
-       " Document(id='Toilet Brush and Holder Set', metadata={'category': 'NaN', 'code': 96033000.0, 'desc': 'Toilet Brush and Holder Set', 'gdesc': 'BORSTELS'}, page_content='The description of this item is:Toilet Brush and Holder Set/nThe description of the goods is:BORSTELS'),\n",
-       " Document(id='Yala Ladies Eau De Toilette - 3.4 OZ', metadata={'category': 'NaN', 'code': 33030010.0, 'desc': 'Yala Ladies Eau De Toilette - 3.4 OZ', 'gdesc': 'PARFUM'}, page_content='The description of this item is:Yala Ladies Eau De Toilette - 3.4 OZ/nThe description of the goods is:PARFUM'),\n",
-       " Document(id='300pcs Lint Free Nail Wipes', metadata={'category': 'NaN', 'code': 34011900.0, 'desc': '300pcs Lint Free Nail Wipes', 'gdesc': 'NATTE DOEKJES'}, page_content='The description of this item is:300pcs Lint Free Nail Wipes/nThe description of the goods is:NATTE DOEKJES'),\n",
-       " Document(id='Bissell Hard Floor Sanitize Formula, 64 oz, 25041', metadata={'category': 'NaN', 'code': 34029000.0, 'desc': 'Bissell Hard Floor Sanitize Formula, 64 oz, 25041', 'gdesc': 'SCHOONMAAKMIDDEL'}, page_content='The description of this item is:Bissell Hard Floor Sanitize Formula, 64 oz, 25041/nThe description of the goods is:SCHOONMAAKMIDDEL')]"
+       "[]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vector_store.similarity_search(query=\"Something used for freshening\",k=20)"
+    "vector_store.similarity_search(query=\"Pink 3d Silicone Earphone Case In Rose Red Color Compatible With 1/2 Pro Kawait\",k=120,filter={\"code\":33059900})"
    ]
   },
   {
